# ReadCollection

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  flake-lock-updater.yaml
examples/: u8_slice.rs
src/: impls.rs  lib.rs  rev.rs  rev_borrowed_buf.rs  rev_buf_reader.rs  rev_read.rs  rev_read_borrowed_buf.rs  rev_reader.rs
src/bibufreader/: buffer.rs  mod.rs  rev_buf_read.rs  rev_read.rs
src/impls/: file.rs  mod.rs  u8_slice.rs
src/read_back/: buf_read_backer.rs  mod.rs  rev_read_borrowed_buf.rs
src/read_back/buf_read_backer/: buffer.rs  mod.rs
src/read_back/impls/: empty.rs  mod.rs  u8_slice.rs
src/rev_buf_reader/: mod.rs
src/rev_reader/: defaults.rs  impls.rs  mod.rs  utils.rs
tests/: mod.rs
tests/file/: buf_read_backer.rs  mod.rs  same_as_read.rs  test_file1.txt  test_file2.txt
