[package]
name = "buf-reader-plus"
version = "0.1.0"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A crate which provides more different types of a buffered reader."
homepage = "https://github.com/TornaxO7/BufReaderPlus"
repository = "https://github.com/TornaxO7/BufReaderPlus"
categories = ["caching"]
license-file = "LICENSE"
keywords = ["buffer", "reader", "bufreader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
