[package]
name = "read_collection"
version = "0.1.5"
edition = "2021"
authors = ["TornaxO7 <tornax@pm.me>"]
description = "A collection of different variants of the `std::io::Read` trait."
homepage = "https://github.com/TornaxO7/ReadCollection"
repository = "https://github.com/TornaxO7/ReadCollection"
categories = ["parsing"]
license-file = "LICENSE"
keywords = ["buffer", "reader", "bufreader", "reverse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2"
